# text-diffusion-defense

./: .gitignore  FUTURE_ROADMAP.md  IMPROVEMENT_PLAN.md  PROJECT_STRUCTURE.md  README.md  RESEARCH_ROADMAP.md  TECHNICAL_DETAILS.md  colab_example.py  demo.py  enhanced_demo.py  enhanced_features_demo.py  examples.py  pyproject.toml  test_advanced_features.py  train_enhanced_model.py  train_model.py
research_details/: DATASET_AND_SCALING.md  FUTURE_ROADMAP.md  INTEGRATION_GUIDE.md
results/benchmarks/: benchmark_results_20251006_162456.json  corrected_benchmark_results_20251006_211031.json
results/evaluations/: model_evaluation_20251006_210548.json
results/training/: training_results_20251006_210546.json
scripts/: README.md  train.py
tests/: test_model.py  test_semantic_similarity.py
text_diffusion_defense/: __init__.py  advanced_safety.py  control_dd.py  enhanced_training_data.py  llm_middleware.py  model.py  model_streamlined.py  safety_controls.py  utils.py
textdiff/: utils.py
